# codex-chatgpt-bridge

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: agent-install.md
docs/superpowers/plans/: 2026-06-21-full-delegate-mode.md
src/codex_chatgpt_bridge/: __init__.py  cli.py  codex_sessions.py  config.py  gateway.py  mcp.py  security.py
tests/: test_cli.py  test_codex_sessions.py  test_config.py  test_gateway.py  test_mcp.py  test_security.py
