[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "codex-chatgpt-bridge"
version = "0.1.0"
description = "A local MCP bridge that lets ChatGPT web sessions inspect approved local files and delegate work to local Codex."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Codex ChatGPT Bridge contributors" }
]
keywords = ["codex", "chatgpt", "mcp", "local-first", "agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools"
]
dependencies = [
  "fastapi>=0.115",
  "pydantic>=2.7",
  "uvicorn[standard]>=0.30"
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "httpx>=0.27",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.6"
]

[project.scripts]
codex-chatgpt-bridge = "codex_chatgpt_bridge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_chatgpt_bridge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
